--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "html-react-parser": "^3.0.9",
     "next": "12.2.5",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
