--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
-    "html-react-parser": "^3.0.9",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "next": "12.2.5",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
